force-app/main/default/objects/Prototype_Report_Daily_Sales__c/Prototype_Report_Daily_Sales__c.object-meta.xml
<CustomObject>
    <label>Prototype Report Daily Sales</label>
    <nameField>
        <displayFormat>PRDS-{0000}</displayFormat>
        <label>Prototype Report Daily Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prototype Report Daily Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>