force-app/main/default/objects/Prototype_Report_Daily_Sales__c/fields/Daily_Sales__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales__c</fullName>
    <label>Daily Sales</label>
    <referenceTo>Retail_Number__c</referenceTo>
    <relationshipLabel>Prototype Report Daily Sales</relationshipLabel>
    <relationshipName>Prototype_Report_Daily_Sales</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>