force-app/main/default/objects/Prototype_Report_Daily_Sales__c/fields/Is_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>当月统计标记</description>
    <label>Is Current Month</label>
    <type>Checkbox</type>
</CustomField>