force-app/main/default/objects/Prototype_Report_Daily_Sales__c/fields/Is_Last_3_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_3_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>近三个月标记</description>
    <label>Is Last 3 Month</label>
    <type>Checkbox</type>
</CustomField>