force-app/main/default/objects/Prototype_Report_Daily_Sales__c/fields/Is_Last_6_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_6_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last 6 Month</label>
    <type>Checkbox</type>
</CustomField>